--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,6 +11,10 @@ sites:
     url: https://news.ycombinator.com
   - name: Test Broken Site
     url: https://thissitedoesnotexist.koj.co
+  - name: Mail Service
+    check: "tcp-ping"
+    url: mail.fgross.cloud
+    port: 22
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
