--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,9 +3,24 @@ owner: fbigrs # Your GitHub organization or username, where this repository live
 repo: status.fgross.cloud # The name of this repository
 
 sites:
-  - name: Gamehost
+  - name: Thor (Main)
     check: "tcp-ping"
-    url: 85.215.117.229
+    url: 144.76.40.174
+    port: 22
+  
+  - name: Game & Voice Host
+    check: "tcp-ping"
+    url: 144.76.40.162
+    port: 22
+
+  - name: Cloud
+    check: "tcp-ping"
+    url: 144.76.40.126
+    port: 22
+
+  - name: Windows Node
+    check: "tcp-ping"
+    url: 144.76.40.118
     port: 22
 
   - name: Mail Service
