changed some hosts

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,22 +10,22 @@ sites:
   
   - name: Game & Voice Host
     check: "tcp-ping"
-    url: 144.76.40.162
+    url: 142.132.249.249
     port: 22
 
   - name: Cloud
     check: "tcp-ping"
-    url: 144.76.40.126
+    url: 142.132.249.249
     port: 22
 
-  - name: Windows Node
-    check: "tcp-ping"
-    url: 144.76.40.118
-    port: 3389
+  # - name: Windows Node
+  #   check: "tcp-ping"
+  #   url: 144.76.40.118
+  #   port: 3389
 
   - name: Mail Service
     check: "tcp-ping"
-    url: mail.fgross.cloud
+    url: 82.165.1.212
     port: 22
 
 status-website:
